[metadata]
name = mara-page
version = attr: mara_page.__version__
url = https://github.com/mara/mara-page
description = Minimal API for defining pages of Flask-based backends independently from the actual backend infrastructure
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_page
python_requires = >= 3.6
install_requires =
    flask>=0.12
    pygments>=2.2.0
